--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-box" href="#">Хочу сюда!<span
-                  class="visually-hidden">Бронирование</span></a>
+              <button class="navigation-button" type="button">Хочу сюда!<span
+                  class="visually-hidden">Бронирование</span></button>
             </li>
           </ul>
         </nav>
@@ -59,7 +59,7 @@
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
-              <img class="advantages-image" src="images/sedona_view.jpg" width="800" height="385"
+              <img class="advantages-image" src="images/sedona_view.jpg"
                 alt="Настоящий городок">
             </li>
             <li class="advantages-item">
@@ -75,7 +75,7 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-image" src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
+              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -118,7 +118,7 @@
           <p class="subscribe-description">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
           <form class="email" action="https://echo.htmlacademy.ru/" method="post">
             <input type="email" name="email" placeholder="Ваш e-mail">
-            <button class="button button-subscribe" type="submit">Подписаться</button>
+            <button class="button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
       </main>
