--- a/catalog.html
+++ b/catalog.html
@@ -151,92 +151,68 @@
             </button>
             </div>
           </div>
-          <div class="hotel-card-container">
-            <div class="hotel-card">
+          <ul class="hotel-card-container">
+            <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/Amara_Resort.jpg" width="300" height="212"
                   alt="Amara Resort & Spa">
-                <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
-              <div class="text-wrapper">
+              <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 4000 ₽</span>
-              </div>
-              <div class="button-wrapper">
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">Избранное</a>
-              </div>
-              <div class="rating-wrapper">
                 <p class="star star-4">
                   <span class="visually-hidden">4 звезды</span>
                 </p>
                 <p class="rating">Рейтинг 8,5</p>
-              </div>
-            </div>
-            <div class="hotel-card">
+            </li>
+            <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/Villas_as_Poco_Diablo.jpg" width="300" height="212"
                   alt="Villas at Poco Diablo">
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
-              <div class="text-wrapper">
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 5000 ₽</span>
-              </div>
-              <div class="button-wrapper">
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like like-selected" href="#">Избранное</a>
-              </div>
-              <div class="rating-wrapper">
                 <p class="star star-4">
                   <span class="visually-hidden">4 звезды</span>
                 </p>
                 <p class="rating">Рейтинг 9,2</p>
-              </div>
-            </div>
-            <div class="hotel-card">
+              </li>
+            <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/Desert_Quail_Inn.jpg" width="300" height="212"
                   alt="Desert Quail Inn">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
-              <div class="text-wrapper">
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 2500 ₽</span>
-              </div>
-              <div class="button-wrapper">
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">Избранное</a>
-              </div>
-              <div class="rating-wrapper">
                 <p class="star star-3">
                   <span class="visually-hidden">3 звезды</span>
                 </p>
                 <p class="rating">Рейтинг 6,9</p>
-              </div>
-            </div>
-            <div class="hotel-card">
+            </li>
+            <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/GreenTree_Inn.jpg" width="300" height="212"
                   alt="GreenTree Inn">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
-              <div class="text-wrapper">
               <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 1500 ₽</span>
-              </div>
-              <div class="button-wrapper">
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">Избранное</a>
-              </div>
-              <div class="rating-wrapper">
                 <p class="star star-2">
                   <span class="visually-hidden">2 звезды</span>
                 </p>
                 <p class="rating">Рейтинг 5,0</p>
-              </div>
-            </div>
-          </div>
+              </li>
+          </ul>
           <ul class="pagination">
             <li class="pagination-item">
               <a class="pagination-link pagination-current" href="#">1</a>
