--- a/catalog.html
+++ b/catalog.html
@@ -44,92 +44,92 @@
       </header>
       <main class="main-catalog main-container">
         <div class="filter-container">
-            <header class="catalog-header">
-              <h1 class="catalog-header-title">Гостиницы Седоны</h1>
-              <ul class="breadcrumbs">
-                <li class="breadcrumbs-item">
-                  <a class="home-icon" href="index.html">
+          <header class="catalog-header">
+            <h1 class="catalog-header-title">Гостиницы Седоны</h1>
+            <ul class="breadcrumbs">
+              <li class="breadcrumbs-item">
+                <a class="home-icon" href="index.html">
                   <img src="images/home_catalog.svg" width="12" height="12" alt="home">
-                  </a>
+                </a>
+              </li>
+              <li class="breadcrumbs-item">
+                <a class="breadcrumbs-link">Гостиницы</a>
+              </li>
+            </ul>
+          </header>
+          <form class="catalog-filter" action="#" method="get">
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Инфраструктура:</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-checkbox" type="checkbox" name="pool" checked>
+                    Бассейн
+                  </label>
                 </li>
-                <li class="breadcrumbs-item">
-                  <a class="breadcrumbs-link">Гостиницы</a>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-checkbox" type="checkbox" name="parking" checked>
+                    Парковка
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-checkbox" type="checkbox" name="Wi-Fi">
+                    Wi-Fi
+                  </label>
                 </li>
               </ul>
-            </header>
-            <form class="catalog-filter" action="#" method="get">
-                <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Инфраструктура</legend>
-                  <ul class="catalog-filter-list">
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-checkbox" type="checkbox" name="pool" checked>
-                        Бассейн
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-checkbox" type="checkbox" name="parking" checked>
-                        Парковка
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-checkbox" type="checkbox" name="Wi-Fi">
-                        Wi-Fi
-                      </label>
-                    </li>
-                  </ul>
-                </fieldset>
-                <fieldset class="catalog-filter-group">
-                  <legend class="catalog-filter-title">Тип Жилья</legend>
-                  <ul class="catalog-filter-list">
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-radio" type="radio" name="hotel-type" value="hotel" checked>
-                        Гостинница
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-radio" type="radio" name="hotel-type" value="motel">
-                        Мотель
-                      </label>
-                    </li>
-                    <li class="catalog-filter-item">
-                      <label class="control">
-                        <input class="input-radio" type="radio" name="hotel-type" value="apartments">
-                        Апартаменты
-                      </label>
-                    </li>
-                  </ul>
-                </fieldset>
-                <fieldset class="catalog-filter filter-cost">
-                  <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                  <div class="fieldset-wrapper">
-                  <div class="filter-range">
-                    <input class="cost-min" type="number" placeholder="цена от" aria-label="минимальная стоимость"
-                      value="0">
-                    <input class="cost-max" type="number" placeholder="цена до" aria-label="максимальная стоимость"
-                      value="9000">
-                  </div>
-                  <div class="cost-range">
-                    <button class="button-cost" type="button">
-                      <span class="visually-hidden">установить минимальную стоимость</span>
-                    </button>
-                    <button class="button-cost" type="button">
-                      <span class="visually-hidden">установить максимальную стоимость</span>
-                    </button>
-                    <span class="cost-range line"></span>
-                    <span class="cost-range line active"></span>
-                  </div>
-                  </div>
-                </fieldset>
-                <div class="fieldset-buttons">
-                <button class="button button-submit" type="submit">Применить</button>
-                <button class="button button-reset" type="reset">Сбросить</button>
+            </fieldset>
+            <fieldset class="catalog-filter-group">
+              <legend class="catalog-filter-title">Тип Жилья:</legend>
+              <ul class="catalog-filter-list">
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-radio" type="radio" name="hotel-type" value="hotel" checked>
+                    Гостинница
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-radio" type="radio" name="hotel-type" value="motel">
+                    Мотель
+                  </label>
+                </li>
+                <li class="catalog-filter-item">
+                  <label class="control">
+                    <input class="input-radio" type="radio" name="hotel-type" value="apartments">
+                    Апартаменты
+                  </label>
+                </li>
+              </ul>
+            </fieldset>
+            <fieldset class="catalog-filter filter-cost">
+              <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+              <div class="fieldset-wrapper">
+                <div class="filter-range">
+                  <input class="cost-min" type="number" placeholder="цена от" aria-label="минимальная стоимость"
+                    value="0">
+                  <input class="cost-max" type="number" placeholder="цена до" aria-label="максимальная стоимость"
+                    value="9000">
                 </div>
-            </form>
+                <div class="cost-range">
+                  <button class="button-cost" type="button">
+                    <span class="visually-hidden">установить минимальную стоимость</span>
+                  </button>
+                  <button class="button-cost" type="button">
+                    <span class="visually-hidden">установить максимальную стоимость</span>
+                  </button>
+                  <span class="cost-range line"></span>
+                  <span class="cost-range line active"></span>
+                </div>
+              </div>
+            </fieldset>
+            <div class="fieldset-buttons">
+              <button class="button button-submit" type="submit">Применить</button>
+              <button class="button button-reset" type="reset">Сбросить</button>
+            </div>
+          </form>
         </div>
         <section class="catalog">
           <div class="catalog-sort">
@@ -140,15 +140,15 @@
               <option value="expensive">Сначала дорогое</option>
             </select>
             <div class="sort-wrapper">
-            <button type="button" class="button-card">
-              <span class="visually-hidden">Карточки</span>
-            </button>
-            <button type="button" class="button-slide">
-              <span class="visually-hidden">Слайд-шоу</span>
-            </button>
-            <button type="button" class="button-list">
-              <span class="visually-hidden">Список</span>
-            </button>
+              <button type="button" class="button-card">
+                <span class="visually-hidden">Карточки</span>
+              </button>
+              <button type="button" class="button-slide">
+                <span class="visually-hidden">Слайд-шоу</span>
+              </button>
+              <button type="button" class="button-list">
+                <span class="visually-hidden">Список</span>
+              </button>
             </div>
           </div>
           <ul class="hotel-card-container">
@@ -158,60 +158,60 @@
                   alt="Amara Resort & Spa">
               </a>
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 4000 ₽</span>
+              <p class="hotel-card-type">Гостиница</p>
+              <p class="hotel-card-price">От 4000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <a class="button button-like" href="#">Избранное</a>
-                <p class="star star-4">
-                  <span class="visually-hidden">4 звезды</span>
-                </p>
-                <p class="rating">Рейтинг 8,5</p>
+              <button class="button button-like" href="#">Избранное</button>
+              <p class="star star-4">
+                <span class="visually-hidden">4 звезды</span>
+              </p>
+              <p class="rating">Рейтинг 8,5</p>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/Villas_as_Poco_Diablo.jpg" width="300" height="212"
                   alt="Villas at Poco Diablo">
-                <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 5000 ₽</span>
+              <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+              <p class="hotel-card-type">Гостиница</p>
+              <p class="hotel-card-price">От 5000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <a class="button button-like like-selected" href="#">Избранное</a>
-                <p class="star star-4">
-                  <span class="visually-hidden">4 звезды</span>
-                </p>
-                <p class="rating">Рейтинг 9,2</p>
-              </li>
+              <button class="button button-like like-selected" href="#">Избранное</button>
+              <p class="star star-4">
+                <span class="visually-hidden">4 звезды</span>
+              </p>
+              <p class="rating">Рейтинг 9,2</p>
+            </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/Desert_Quail_Inn.jpg" width="300" height="212"
                   alt="Desert Quail Inn">
-                <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 2500 ₽</span>
+              <h3 class="hotel-card-title">Desert Quail Inn</h3>
+              <p class="hotel-card-type">Гостиница</p>
+              <p class="hotel-card-price">От 2500 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <a class="button button-like" href="#">Избранное</a>
-                <p class="star star-3">
-                  <span class="visually-hidden">3 звезды</span>
-                </p>
-                <p class="rating">Рейтинг 6,9</p>
+              <button class="button button-like" href="#">Избранное</button>
+              <p class="star star-3">
+                <span class="visually-hidden">3 звезды</span>
+              </p>
+              <p class="rating">Рейтинг 6,9</p>
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
                 <img class="hotel-card-image" src="images/GreenTree_Inn.jpg" width="300" height="212"
                   alt="GreenTree Inn">
-                <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостиница</span>
-              <span class="hotel-card-price">От 1500 ₽</span>
+              <h3 class="hotel-card-title">GreenTree Inn</h3>
+              <p class="hotel-card-type">Гостиница</p>
+              <p class="hotel-card-price">От 1500 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <a class="button button-like" href="#">Избранное</a>
-                <p class="star star-2">
-                  <span class="visually-hidden">2 звезды</span>
-                </p>
-                <p class="rating">Рейтинг 5,0</p>
-              </li>
+              <button class="button button-like" type="button">Избранное</button>
+              <p class="star star-2">
+                <span class="visually-hidden">2 звезды</span>
+              </p>
+              <p class="rating">Рейтинг 5,0</p>
+            </li>
           </ul>
           <ul class="pagination">
             <li class="pagination-item">
@@ -238,10 +238,10 @@
           <h2 class="subscribe-title catalog-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description catalog-description">Только полезная информация и никакого спама,<br>честное
             бойскаутское!</p>
-            <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-              <input type="email" name="email" placeholder="Ваш e-mail">
-              <button class="button-subscribe" type="submit">Подписаться</button>
-            </form>
+          <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+            <input type="email" name="email" placeholder="Ваш e-mail">
+            <button class="button-subscribe" type="submit">Подписаться</button>
+          </form>
         </section>
       </main>
       <footer class="footer">
@@ -276,18 +276,13 @@
               </li>
             </ul>
           </div>
-          <div class="phone">
-            <h2 class="visually-hidden">Номер телефона</h2>
-            <a class="link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </div>
-          <p class="about-text">
-            <a class="htmlacademy-link" href="https://htmlacademy.ru/">
-              <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
-                <path fill="#000"
-                  d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
-              </svg>
-            </a>
-          </p>
+          <a class="link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+          <a class="about-text" href="https://htmlacademy.ru/">
+            <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
+              <path fill="#000"
+                d="M0 13.26v2.6h2.5v-2.6H0ZM11.6 4.86c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.16h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.96c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.06c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7ZM28.9 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.36c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.06c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.16c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.26c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.26c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.36l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+            </svg>
+          </a>
         </div>
       </footer>
     </div>
