--- a/catalog.html
+++ b/catalog.html
@@ -161,7 +161,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 4000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like" href="#">Избранное</button>
+              <button class="button button-like" href="#">В избранное</button>
               <p class="star star-4">
                 <span class="visually-hidden">4 звезды</span>
               </p>
@@ -176,7 +176,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 5000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like like-selected" href="#">Избранное</button>
+              <button class="button button-like like-selected" href="#">В избранном</button>
               <p class="star star-4">
                 <span class="visually-hidden">4 звезды</span>
               </p>
@@ -191,7 +191,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 2500 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like" href="#">Избранное</button>
+              <button class="button button-like" href="#">В избранное</button>
               <p class="star star-3">
                 <span class="visually-hidden">3 звезды</span>
               </p>
@@ -206,7 +206,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 1500 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like" type="button">Избранное</button>
+              <button class="button button-like" type="button">В избранное</button>
               <p class="star star-2">
                 <span class="visually-hidden">2 звезды</span>
               </p>
@@ -244,13 +244,13 @@
           </form>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer catalog-footer">
         <div class="page-footer-container">
-          <div class="social">
+          <div class="social social-catalog">
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-item">
-                <a class="link" href="https://vk.com/htmlacademy">
+                <a class="link-social" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">ВКонтакте</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -260,7 +260,7 @@
                 </a>
               </li>
               <li class="social-item">
-                <a class="link" href="https://t.me/htmlacademy">
+                <a class="link-social" href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Telegram</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" aria-hidden="true">
                     <path
@@ -269,7 +269,7 @@
                 </a>
               </li>
               <li class="social-item">
-                <a class="link" href="https://www.youtube.com/user/htmlacademyru">
+                <a class="link-social" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">YouTube</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" aria-hidden="true">
                     <path
