--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
         </section>
         <section class="hero-description">
-          <h2 class="hero-title">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+          <h2 class="hero-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
           <p class="hero-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <section class="advantages">
@@ -125,7 +125,7 @@
             <h2 class="visually-hidden">Социальные сети</h2>
             <ul class="social-list">
               <li class="social-item">
-                <a class="link" href="https://vk.com/htmlacademy">
+                <a class="link-social" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">ВКонтакте</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" aria-hidden="true">
                     <path fill-rule="evenodd"
@@ -135,7 +135,7 @@
                 </a>
               </li>
               <li class="social-item">
-                <a class="link" href="https://t.me/htmlacademy">
+                <a class="link-social" href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Telegram</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="16" aria-hidden="true">
                     <path
@@ -144,7 +144,7 @@
                 </a>
               </li>
               <li class="social-item">
-                <a class="link" href="https://www.youtube.com/user/htmlacademyru">
+                <a class="link-social" href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">YouTube</span>
                   <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" aria-hidden="true">
                     <path
