--- a/catalog.html
+++ b/catalog.html
@@ -121,7 +121,7 @@
                     <span class="visually-hidden">установить максимальную стоимость</span>
                   </button>
                   <span class="cost-range line"></span>
-                  <span class="cost-range line active"></span>
+                  <span class="cost-range line-active"></span>
                 </div>
               </div>
             </fieldset>
@@ -161,7 +161,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 4000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like" href="#">В избранное</button>
+              <button class="button button-like">В избранное</button>
               <p class="star star-4">
                 <span class="visually-hidden">4 звезды</span>
               </p>
@@ -176,7 +176,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 5000 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like like-selected" href="#">В избранном</button>
+              <button class="button button-like like-selected">В избранном</button>
               <p class="star star-4">
                 <span class="visually-hidden">4 звезды</span>
               </p>
@@ -191,7 +191,7 @@
               <p class="hotel-card-type">Гостиница</p>
               <p class="hotel-card-price">От 2500 ₽</p>
               <a class="button button-about" href="#">Подробнее</a>
-              <button class="button button-like" href="#">В избранное</button>
+              <button class="button button-like">В избранное</button>
               <p class="star star-3">
                 <span class="visually-hidden">3 звезды</span>
               </p>
