--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
-              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок">
+              <img src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800px" height="385px">
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
@@ -76,7 +76,7 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола">
+              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола" width="800px" height="385px">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
