--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
               </div>
-              <img src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800px" height="385px">
+              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800px" height="385px">
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
