добавил файл с модалкой

--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
 
   <body>
     <div class="page-container">
-      <header class="main-header">
+      <header class="main-header" data-test="header">
         <nav class="navigation">
           <img class="logo" src="images/logo.svg" alt="Логотип">
           <ul class="navigation-list">
@@ -38,13 +38,13 @@
               </a>
             </li>
             <li class="navigation-item">
-              <button class="navigation-button" type="button">Хочу сюда!<span
-                  class="visually-hidden">Бронирование</span></button>
+              <a class="navigation-button" href="modal.html">Хочу сюда!<span
+                  class="visually-hidden">Бронирование</span></a>
             </li>
           </ul>
         </nav>
       </header>
-      <main class="main-catalog main-container">
+      <main class="main-catalog main-container" data-test="main">
         <div class="filter-container">
           <header class="catalog-header">
             <h1 class="catalog-header-title">Гостиницы Седоны</h1>
@@ -59,7 +59,7 @@
               </li>
             </ul>
           </header>
-          <form class="catalog-filter" action="#" method="get">
+          <form class="catalog-filter" action="#" method="get" data-test="filter">
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
@@ -133,7 +133,7 @@
             </div>
           </form>
         </div>
-        <section class="catalog">
+        <section class="catalog" data-test="catalog">
           <div class="catalog-sort">
             <h2 class="found">Найдено гостиниц: 38</h2>
             <select class="select-control" aria-label="Сортировка">
@@ -236,7 +236,7 @@
             </li>
           </ul>
         </section>
-        <section class="subscribe subscribe-catalog">
+        <section class="subscribe subscribe-catalog" data-test="subscribe">
           <h2 class="subscribe-title catalog-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description catalog-description">Только полезная информация и никакого спама,<br>честное
             бойскаутское!</p>
@@ -246,7 +246,7 @@
           </form>
         </section>
       </main>
-      <footer class="footer catalog-footer">
+      <footer class="footer catalog-footer" data-test="footer">
         <div class="page-footer-container">
           <div class="social social-catalog">
             <h2 class="visually-hidden">Социальные сети</h2>
