--- a/modal.html
+++ b/modal.html
@@ -38,9 +38,8 @@
               </a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-button" href="modal.html">Хочу сюда!
-                <span class="visually-hidden">Бронирование</span>
-              </a>
+              <button class="navigation-button" type="button">Хочу сюда!<span
+                  class="visually-hidden">Бронирование</span></button>
             </li>
           </ul>
         </nav>
@@ -111,7 +110,7 @@
             <p class="search-subtitle">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения
               гостиниц в
               Седоне</p>
-          <a class='button button-search' href="modal.html">Поиск гостиницы в Седоне</a>
+          <button class='button button-search' type="button">Поиск гостиницы в Седоне</button>
         </section>
         <section class="subscribe" data-test="subscribe">
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -167,7 +166,7 @@
           </a>
         </div>
       </footer>
-      <div class="modal-container modal-container-close">
+      <div class="modal-container">
         <div class="modal modal-search">
           <button class="modal-close">
             <span class="visually-hidden">Закрыть</span>
