--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </section>
         <section class="features" data-test="service">
           <div class="features-wrapper">
-            <h2 class="features-title">Приезжайте в Седону отдохнуть <br> в комфорте и уюте</h2>
+            <h2 class="features-title">Приезжайте в Седону отдохнуть <br> в комфорте и уюте!</h2>
             <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="features-list">
