--- a/catalog.html
+++ b/catalog.html
@@ -61,7 +61,7 @@
               </li>
             </ul>
           </header>
-          <form class="catalog-filter" action="#" method="get" data-test="filter">
+          <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get" data-test="filter">
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Инфраструктура:</legend>
               <ul class="catalog-filter-list">
@@ -111,9 +111,9 @@
               <div class="fieldset-wrapper">
                 <div class="filter-range">
                   <input class="cost-min" type="number" step="100" placeholder="цена от" aria-label="минимальная стоимость"
-                    value="0">
+                    value="0"><span class="placeholder min">от</span>
                   <input class="cost-max" type="number" step="100" placeholder="цена до" aria-label="максимальная стоимость"
-                    value="9000">
+                    value="9000"><span class="placeholder max">до</span>
                 </div>
                 <div class="cost-range">
                   <button class="button-cost" type="button">
