--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </a>
         </div>
       </footer>
-      <div class="modal-container modal-container-close">
+      <div class="modal-container modal-container-close" data-test="modal">
         <div class="modal modal-search">
           <button class="modal-close">
             <span class="visually-hidden">Закрыть</span>
