--- a/modal.html
+++ b/modal.html
@@ -166,7 +166,7 @@
           </a>
         </div>
       </footer>
-      <div class="modal-container">
+      <div class="modal-container" data-test="modal">
         <div class="modal modal-search">
           <button class="modal-close">
             <span class="visually-hidden">Закрыть</span>
