--- a/catalog.html
+++ b/catalog.html
@@ -156,7 +156,7 @@
           <ul class="hotel-card-container">
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/Amara_Resort.jpg" width="300" height="212"
+                <img class="hotel-card-image" src="images/amara_resort.jpg" width="300" height="212"
                   alt="Amara Resort & Spa">
               </a>
               <h3 class="hotel-card-title">Amara Resort & Spa</h3>
@@ -171,7 +171,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/Villas_as_Poco_Diablo.jpg" width="300" height="212"
+                <img class="hotel-card-image" src="images/villas_as_poco_diablo.jpg" width="300" height="212"
                   alt="Villas at Poco Diablo">
               </a>
               <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
@@ -186,7 +186,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/Desert_Quail_Inn.jpg" width="300" height="212"
+                <img class="hotel-card-image" src="images/desert_quail_inn.jpg" width="300" height="212"
                   alt="Desert Quail Inn">
               </a>
               <h3 class="hotel-card-title">Desert Quail Inn</h3>
@@ -201,7 +201,7 @@
             </li>
             <li class="hotel-card">
               <a class="hotel-card-link" href="#">
-                <img class="hotel-card-image" src="images/GreenTree_Inn.jpg" width="300" height="212"
+                <img class="hotel-card-image" src="images/greentree_inn.jpg" width="300" height="212"
                   alt="GreenTree Inn">
               </a>
               <h3 class="hotel-card-title">GreenTree Inn</h3>
