--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800px" height="385px">
+              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800" height="385">
             </li>
             <li class="advantages-item">
               <h3 class="advantages-title">Небольшая площадь</h3>
@@ -78,7 +78,7 @@
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages-item">
-              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола" width="800px" height="385px">
+              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола" width="800" height="385">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -118,7 +118,8 @@
           <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p class="subscribe-description">Только полезная информация и никакого спама,<br>честное бойскаутское!</p>
           <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-            <input type="email" name="email" placeholder="Ваш e-mail">
+            <label class="visually-hidden" for="subscribe-email">E-mail</label>
+            <input type="email" name="subscribe-email" placeholder="Ваш e-mail" id="subscribe-email" required>
             <button class="button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
