--- a/modal.html
+++ b/modal.html
@@ -90,16 +90,16 @@
             <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="features-list">
-            <li class="features-item">
+            <li class="features-item features-residential">
               <h3 class="features-title">Жилье</h3>
               <p class="features-description">Рекомендуем пожить<br>в настоящем мотеле,<br>все как в кино!</p>
             </li>
-            <li class="features-item">
+            <li class="features-item features-food">
               <h3 class="features-title">Еда</h3>
               <P class="features-description">Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!
               </P>
             </li>
-            <li class="features-item">
+            <li class="features-item features-souvenirs">
               <h3 class="features-title">Сувениры</h3>
               <p class="features-description">Не только китайского,<br>но и настоящего местного<br>производства!</p>
             </li>
