--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-list">
-            <li class="advantages-item">
-              <div class="advantages-wrapper">
+            <li class="advantages-item advantages-heavyblue">
+              <div class="advantages-wrapper ">
                 <h3 class="advantages-title">Настоящий городок</h3>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
-              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800" height="385">
+              <img class="advantages-image" src="images/sedona_view.jpg" alt="Настоящий городок Седона" width="800" height="100%">
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item advantages-blue">
               <h3 class="advantages-title">Небольшая площадь</h3>
               <p class="advantages-description">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item advantages-lightblue">
               <h3 class="advantages-title">Красивая<br>дорога</h3>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item advantages-blue">
               <h3 class="advantages-title">Мало<br>туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="advantages-item">
-              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола" width="800" height="385">
+            <li class="advantages-item advantages-heavyblue">
+              <img class="advantages-image" src="images/devil_bridge.jpg" alt="Мост дьявола" width="800" height="100%">
               <div class="advantages-wrapper">
                 <h3 class="advantages-title">Там есть<br>мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -92,16 +92,16 @@
             <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
           </div>
           <ul class="features-list">
-            <li class="features-item">
+            <li class="features-item features-residential">
               <h3 class="features-title">Жильё</h3>
               <p class="features-description">Рекомендуем пожить<br>в настоящем мотеле,<br>все как в кино!</p>
             </li>
-            <li class="features-item">
+            <li class="features-item features-food">
               <h3 class="features-title">Еда</h3>
               <P class="features-description">Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!
               </P>
             </li>
-            <li class="features-item">
+            <li class="features-item features-souvenirs">
               <h3 class="features-title">Сувениры</h3>
               <p class="features-description">Не только китайского,<br>но и настоящего местного<br>производства!</p>
             </li>
